--- a/templates/layout/manage.html
+++ b/templates/layout/manage.html
@@ -11,6 +11,11 @@
         .navbar-inverse {
             border-radius: 0;
         }
+
+        .error {
+            color: red;
+            position: absolute;
+        }
     </style>
     {% block css %}{% endblock css %}
 </head>
