--- a/templates/layout/manage.html
+++ b/templates/layout/manage.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}"></link>
     <link rel="stylesheet" href="{% static "css/init.css" %}"></link>
+    <link rel="stylesheet" href="{% static "plugin/fontawesome/css/font-awesome.css" %}"></link>
 
     <style>
         .navbar-inverse {
