--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -95,8 +95,23 @@
                         </div>
                         <div class="down">
                             <span><i class="fa fa-users" aria-hidden="true"></i> {{ item.join_count }}</span>
-                            <a href="{% url "web:project_star" project_id=item.id %}"><i class="fa fa-star-o"
-                                                                                         aria-hidden="true"></i></a>
+                            <span class="unstar" url="{% url "web:project_unstar" project_id=item.id %}"><i
+                                    class="fa fa-star-o"
+                                    aria-hidden="true"></i></span>
+                        </div>
+                    </div>
+                {% endfor %}
+
+                {% for item in join_projects_star %}
+                    <div class="project">
+                        <div class="up">
+                            {{ item.project.name }}
+                        </div>
+                        <div class="down">
+                            <span><i class="fa fa-users" aria-hidden="true"></i> {{ item.project.join_count }}</span>
+                            <span class="unstar" url="{% url "web:project_unstar" project_id=item.project.id %}"><i
+                                    class="fa fa-star-o"
+                                    aria-hidden="true"></i></span>
                         </div>
                     </div>
                 {% endfor %}
@@ -154,6 +169,7 @@
             submitProject()
             handleModel()
             addStar()
+            unStar()
         })
 
         function submitProject() {
@@ -202,6 +218,27 @@
 
         function addStar() {
             $.each($(".opadd"), function (index, value) {
+                $(value).click(function () {
+
+                    let url = $(this).attr("url")
+
+                    $.ajax({
+                        url: url,
+                        type: "get",
+                        dataType: "json",
+                        success: function (res) {
+                            location.reload()
+                        },
+                        error: function (err) {
+                            console.log(err)
+                        }
+                    })
+                })
+            })
+        }
+
+        function unStar() {
+            $.each($(".unstar"), function (index, value) {
                 $(value).click(function () {
 
                     let url = $(this).attr("url")
