--- a/templates/layout/manage.html
+++ b/templates/layout/manage.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load project %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,15 +40,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">当前项目 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">aaa</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">bbb</a></li>
-                    </ul>
-                </li>
+                {% project_select request %}
                 <li><a href="{% url "web:wiki" "1" %}">wiki</a></li>
                 <li><a href="{% url "web:file" project_id="1" %}">文件</a></li>
                 <li><a href="{% url "web:issuse" project_id="1" %}">问题</a></li>
