--- a/templates/inclusion/project_select.html
+++ b/templates/inclusion/project_select.html
@@ -1,13 +1,14 @@
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-       aria-expanded="false">当前项目 <span class="caret"></span></a>
+       aria-expanded="false">当前项目 {% if current_enter_project_name %}{{ current_enter_project_name }}{% endif %}<span
+            class="caret"></span></a>
     <ul class="dropdown-menu">
         {% for item in my_projects %}
-            <li><a href="#">{{ item.name }}</a></li>
+            <li><a href="{% url "web:wiki" project_id=item.id %}">{{ item.name }}</a></li>
         {% endfor %}
         <li role="separator" class="divider"></li>
         {% for item in join_projects %}
-            <li><a href="#">{{ item.project.name }}</a></li>
+            <li><a href="{% url "web:wiki" project_id=item.project.id %}">{{ item.project.name }}</a></li>
         {% endfor %}
     </ul>
 </li>
