--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -5,6 +5,15 @@
 {% endblock title %}
 {% block css %}
     <style>
+        a {
+            color: black;
+        }
+
+        a:hover {
+            text-decoration: none;
+            color: cyan;
+        }
+
         #addProject {
             margin-bottom: 10px;
         }
