--- a/templates/layout/manage.html
+++ b/templates/layout/manage.html
@@ -74,6 +74,8 @@
 {% block content %}{% endblock content %}
 <script src="{% static "js/jquery-3.6.0.min.js" %}"></script>
 <script src="{% static "js/bootstrap.min.js" %}"></script>
+<script src="{% static "js/show_tree.js" %}"></script>
+
 {% block js %}{% endblock js %}
 </body>
 </html>
