导航栏默认选中

--- a/templates/layout/manage.html
+++ b/templates/layout/manage.html
@@ -41,9 +41,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 {% project_select request %}
-                <li><a href="{% url "web:wiki" "1" %}">wiki</a></li>
-                <li><a href="{% url "web:file" project_id="1" parent_id=0 %}">文件</a></li>
-                <li><a href="{% url "web:issuse" project_id="1" %}">问题</a></li>
+                {% manage_nav request %}
 
             </ul>
 
